--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "axios": "^1.4.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-loader": "^6.2.0",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "svg-url-loader": "^8.0.0"
